# swbis

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.inc.in  NEWS  PSF.bin.in  PSF.in  README  README.CVS  autogen.sh  config.h.in  configure  configure.ac  install-sh
catalog/: INDEX  INFO
catalog/dfiles/: AUTHORS  INFO  adjunct_md5sum  files  sha1sum  sha512sum  sig_header  signature  size
catalog/pfiles/: INFO
doc/: Makefile.in  Makefile.std  README  direntry.in  fixdirentry.sh  fixlinks.sh  fixlinks2.sh  fixups.sh  install-info.sh  refme.sh
doc/devel/: CLASSES.fig  DESIGN.txt
doc/examples/: refentry_example.sgml
doc/html/: sw.html  sw_5.html  swbis.html  swbis_1.html  swbis_7.html  swbis_swbis.html  swbis_user.html  swconfig.html  swconfig_8.html  swcopy.html  swcopy_8.html  swign.html  swign_1.html  swinstall.html  swinstall_8.html  swlist.html  swlist_8.html  swpackage.html  swpackage_5.html  swpackage_8.html  swremove.html  swremove_8.html  swverify.html  swverify_8.html
doc/info/: swbis.info  swbis.info-1  swbis.info-2  swbis_lxpsf.info  swbis_rpm2swbis.info  swbis_sw.info  swbis_swbis.info  swbis_swbisparse.info  swbis_swconfig.info  swbis_swcopy.info  swbis_swign.info  swbis_swinstall.info  swbis_swlist.info  swbis_swpackage.info  swbis_swremove.info  swbis_swverify.info  swbis_user.info
doc/source/: commands.texi  configure.texi  glossary.texi  lxpsf.1  rpm2swbis_1.sgml  source_PSF  sw_5.sgml  swbis_1.sgml  swbis_7.sgml  swbisparse_1.sgml  swconfig_8.sgml  swcopy_8.sgml  swign_1.sgml  swinstall_8.sgml  swlist_8.sgml  swpackage_5.sgml  swpackage_8.sgml  swpackage_conventions.sgml  swpackage_examples.sgml  swpackage_extdef.sgml  swpackage_input.sgml  swpackage_output.sgml  swremove_8.sgml  swverify_8.sgml  target.sgml  version.sgml  version.sgml.in  version.texi  version.texi.in
doc/texi/: copying.texi  invoke.texi  signing.texi  standards.texi  status.texi  swbis.texi  swbis_lxpsf.texi  swbis_rpm2swbis.texi  swbis_sw.texi  swbis_swbis.texi  swbis_swbisparse.texi  swbis_swconfig.texi  swbis_swcopy.texi  swbis_swign.texi  swbis_swinstall.texi  swbis_swlist.texi  swbis_swpackage.texi  swbis_swremove.texi  swbis_swverify.texi  swbis_user.texi  target.texi  version.texi
etc/: PSF.in  PSF.minimal  swbisdefaults  swdefaults
examples/: PSF.bin.map1  PSF.bin.map2  PSF.bin.map2a  PSF.bin.map3  PSF.bin.sfs  PSF.destdir  PSF.dir1  PSF.dir2  PSF.minimal  PSF.source.in  control_script.sh  source_build.sh
include/: config_remains.h  debug_config.h  stream_config.h  swinttypes.h  swprog_versions.h  swprog_versions.h.in  swuser_assert_config.h  swuser_config.h  user_config.h
swprogs/: Makefile.in  fixcatalog.awk  globalblob.c  globalblob.h  intsizes.c  iswverify.c  pax_commands.h  rpm2psf.sh.in  rpm2swbis.sh.in  rpm2tar  runswpackagetest.c  sw_2tar.cxx  swbis.sh.in  swbisparse.cxx  swcommon.c  swcommon.h  swcommon0.c  swcommon0.h  swconfig.c  swconfig_lib.c  swconfig_lib.h  swcopy.c  swign.sh.in  swinstall.c  swinstall.h  swinstall_lib.c  swlist.c  swlist.h  swlist_lib.c  swlist_lib.h  swpackage.cxx  swproglib.c  swproglib.h  swremove.c  swremove_lib.c  swremove_lib.h  swverify.sh.in  swverify_lib.c  swverify_lib.h
swstructlib/: Makefile.in  Makefile.inc.in  config.h.in  configure  configure.ac
swstructlib/src/: Makefile.in  Makefile.inc.in  README  config.h.in  configure  configure.in
swstructlib/src/archive/: Makefile.in  portablearchive.cxx  portablearchive.h  swpathname.cxx  swpathname.h  uxformat.cxx  uxformat.h  uxformatcpio.cxx  uxformatcpio.h
swstructlib/src/misc/: Makefile.in  swattributelist.cxx  swattributelist.h  swattributemem.cxx  swattributemem.h  switer.cxx  switer.h  switer_x.cxx  swparser.cxx  swparser.h  swptrlist.cxx  swptrlist.h  swptrlist_debug.cxx  swselection.cxx  swselection.h  swstructdef.cxx  swstructdef.h  swstructiter.cxx  swstructiter.h
swstructlib/src/swexport/: CLASSES  Makefile.in  swexbundle.cxx  swexbundle.h  swexcat.cxx  swexcat.h  swexcat_debug.cxx  swexcategory.cxx  swexcategory.h  swexdfiles.cxx  swexdfiles.h  swexdistribution.cxx  swexdistribution.h  swexdistribution_debug.cxx  swexfileset.cxx  swexfileset.h  swexfileset_debug.cxx  swexhost.cxx  swexhost.h  swexhost_debug.cxx  swexmedia.cxx  swexmedia.h  swexpfiles.cxx  swexpfiles.h  swexproduct.cxx  swexproduct.h  swexproduct_debug.cxx  swexpsf.cxx  swexpsf.h  swexstruct.cxx  swexstruct.h  swexstruct_i.cxx  swexstruct_i.h  swexstruct_i_debug.cxx  swexsubproduct.cxx  swexsubproduct.h  swexvendor.cxx  swexvendor.h  swixcat.cxx  swixcat.h  (+5 more)
swstructlib/src/swmetadata/: Makefile.in  swattribute.cxx  swattribute.h  swattributefile.cxx  swattributefile.h  swcatalogfile.cxx  swcatalogfile.h  swcontrolfile.cxx  swcontrolfile.h  swcontrolscript.cxx  swcontrolscript.h  swcontrolscripts.cxx  swcontrolscripts.h  swdefbundle.cxx  swdefbundle.h  swdefcategory.cxx  swdefcategory.h  swdefcontrolfile.cxx  swdefcontrolfile.h  swdefdistribution.cxx  swdefdistribution.h  swdeffile.cxx  swdeffile.h  swdeffileset.cxx  swdeffileset.h  swdefhost.cxx  swdefhost.h  swdefinition.cxx  swdefinition.h  swdefinition_debug.cxx  swdefinitionfile.cxx  swdefinitionfile.h  swdefinitionfile_debug.cxx  swdefinitionfile_debug.h  swdefinstalled_software.cxx  swdefinstalled_software.h  swdefmedia.cxx  swdefmedia.h  swdefproduct.cxx  swdefproduct.h  (+31 more)
swstructlib/src/swstruct/: Makefile.in  swsattributefile.cxx  swsattributefile.h  swsbundle.cxx  swsbundle.h  swscategory.cxx  swscategory.h  swscollection.cxx  swscollection.cxxSAVE  swscollection.h  swscontrolfile.cxx  swscontrolfile.h  swsdistribution.cxx  swsdistribution.h  swsfile.cxx  swsfile.h  swsfileset.cxx  swsfileset.h  swshost.cxx  swshost.h  swsmedia.cxx  swsmedia.h  swsnode.cxx  swsnode.h  swsproduct.cxx  swsproduct.h  swspsf.cxx  swspsf.h  swssubproduct.cxx  swssubproduct.h  swstruct.cxx  swstruct.h  swstruct_i.cxx  swstruct_i.h  swstruct_misc.cxx  swsvendor.cxx  swsvendor.h
swsupplib/: Makefile.in  Makefile.inc.in  Makefile.inc.std  Makefile.std  README  config.h.in  configure  configure.ac  make_archive  testlist
var/: README.gnupg
(+664 files in other folders)
